# robo_dodgeball

./: CMakeLists.txt  LSTM.md  README.md  _config.yml  about.md  blog.md  index.html  index.md  machine_learning.md  neural_network.md  package.xml  project_proposal.md  rl_testing.py  starter_nn.ipynb  system_architecture.md
_posts/: 2020-11-23-dataset-and-things.md  2020-12-15-LSTM_models.md  2020-12-15-what_to_change.md  2020-12-17-simple-neural-nets.md  2020-12-17-what_to_change.md  2020-12-6-timing-is-everything  2020-12-6-timing-is-everything.md  LSTM_models.md
datasets/: 000_2ball_random_1.5x5_angle_keyboard_amy.npy  002_2ball_straight_1x5_vector_keyboard_nathan.npy  004_2ball_neato_1.5x5_vector_joystick_amy.npy  005_2ball_neato_1.5x5_vector_joystick_amy.npy  006_2ball_neato_1.5x5_vector_keyboard_nathan.npy  007_2ball_straight_1.5x5_vector_keyboard_nathan.npy  008_2ball_straight_1.5x5_vector_keyboard_nathan.npy  009_2ball_random_1.5x5_vector_keyboard_nathan.npy  010_2ball_random_1.5x5_vector_keyboard_nathan.npy  011_2ball_random_1.5x5_vector_keyboard_nathan.npy  012_2ball_random_1.5x5_vector_keyboard_nathan.npy  013_2ball_gaussian_1.5x5_vector_joystick_amy.npy  014_2ball_random_1.5x5_vector_keyboard_nathan_noorigin.npy  015_2ball_neato_1.5x5_vector_key_nathan_noorigin.npy  016_2ball_neato_1.5x5_vector_key_nathan_noorigin.npy  017_2ball_neato_1.5x5_vector_key_nathan_noorigin.npy  018_2ball_neato_1.5x5_vector_key_nathan_noorigin.npy  019_2ball_neato_1.5x5_vector_key_nathan_noorigin.npy  020_2ball_neato_1.5x5_vector_key_nathan_noorigin.npy  11-21-20_dataset  test.npy  (+5 more)
(+211 files in other folders)
